attempts to fix navbar overflow on mobile devices

--- a/docs/css/bootstrap-override.css
+++ b/docs/css/bootstrap-override.css
@@ -13,4 +13,5 @@
 .navbar-brand
 {
     display: flex;
+    max-width: fit-content;
 }
