--- a/docs/css/sitewide.css
+++ b/docs/css/sitewide.css
@@ -3,7 +3,6 @@
 }
 
 h1 {
-    text-align: center;
     padding-top: 30px;
     padding-bottom: 15px;
     font-size: larger;
